[package]
name = "rivets-injector"
version = "1.0.2"
edition = "2021"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "allow"
trivial_regex = "allow"

[dependencies]
thiserror = "1.0"
configparser = "3.1"
mod_util = { git = "https://github.com/fgardt/factorio-scanner" }

[target.'cfg(windows)'.dependencies]
anyhow = "1.0"
dll-syringe = "0.15.2"
windows = { version = "0.58.0", features = [
    "Win32",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
] }

[target.'cfg(unix)'.dependencies]
ctor = "0.2.8"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
